# GeoMod

./: CMakeLists.txt  Cargo.toml  README.md  client.py  gridFs.glsl  gridGs.glsl  gridVs.glsl  main.cpp
GeoMod/: BaseTypes.h  GeoMod.h  gTopology.h
GeoMod/Debug/: gLog.h
GeoMod/Developer/: dGui.h
GeoMod/Encoding/: gStepGraph.h
GeoMod/Geometric/: gGeometry.h  gSketchGeometry.h
GeoMod/Kernel/: gKernel.h  gKernelFunction.h  gKernelServer.h
GeoMod/Scene/: gModel.h  gScene.h  gSceneSystem.h
GeoMod/Utility/Files/: gFileReader.h
Include/: BaseTypes.h  GeoMod.h  gTopology.h
Include/Geometric/: gSketchGeometry.h
Include/Parametric/: gParameter.h
src/: bin.rs  lib.rs
src/repl/: mod.rs
